k8s/overlays/production/emotion-api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okimochi-emotion-api
spec:
  replicas: 2
  template:
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: okimochi-emotion-api
      containers:
        - name: emotion-api
          image: okimochi-emotion-api:stable
